--- a/.github/workflows/discord-issue-webhook.yml
+++ b/.github/workflows/discord-issue-webhook.yml
@@ -19,30 +19,30 @@ jobs:
           ISSUE_AVATAR: ${{ github.event.issue.user.avatar_url }}
           ISSUE_DATE: ${{ github.event.issue.created_at }}
           REPO_NAME: ${{ github.repository }}
-        run: |
-          # Truncate the issue body to 200 chars, escape double quotes
-          TRUNC_BODY=$(echo "$ISSUE_BODY" | head -c 200 | sed 's/"/\\"/g')
-          if [ -z "$TRUNC_BODY" ]; then
-            TRUNC_BODY="No description provided."
-          fi
+          run: |
+        # Safely escape double quotes and backslashes in issue title and body
+        ESCAPED_TITLE=$(echo "$ISSUE_TITLE" | sed 's/\\/\\\\/g' | sed 's/"/\\"/g')
+        ESCAPED_BODY=$(echo "$ISSUE_BODY" | head -c 200 | sed 's/\\/\\\\/g' | sed 's/"/\\"/g')
+        if [ -z "$ESCAPED_BODY" ]; then
+          ESCAPED_BODY="No description provided."
+        fi
 
-          # Send to Discord
-          curl -X POST -H "Content-Type: application/json" \
-          -d "{
-            \"embeds\": [{
-              \"title\": \"🆕 New Issue #$ISSUE_NUMBER: $ISSUE_TITLE\",
-              \"description\": \"$TRUNC_BODY...\",
-              \"url\": \"$ISSUE_URL\",
-              \"color\": 7506394,
-              \"author\": {
-                \"name\": \"$ISSUE_AUTHOR\",
-                \"url\": \"https://github.com/$ISSUE_AUTHOR\",
-                \"icon_url\": \"$ISSUE_AVATAR\"
-              },
-              \"footer\": {
-                \"text\": \"$REPO_NAME\"
-              },
-              \"timestamp\": \"$ISSUE_DATE\"
-            }]
-          }" \
-          "$DISCORD_WEBHOOK"
+        curl -X POST -H "Content-Type: application/json" \
+        -d "{
+          \"embeds\": [{
+            \"title\": \"🆕 New Issue #$ISSUE_NUMBER: $ESCAPED_TITLE\",
+            \"description\": \"$ESCAPED_BODY...\",
+            \"url\": \"$ISSUE_URL\",
+            \"color\": 7506394,
+            \"author\": {
+              \"name\": \"$ISSUE_AUTHOR\",
+              \"url\": \"https://github.com/$ISSUE_AUTHOR\",
+              \"icon_url\": \"$ISSUE_AVATAR\"
+            },
+            \"footer\": {
+              \"text\": \"$REPO_NAME\"
+            },
+            \"timestamp\": \"$ISSUE_DATE\"
+          }]
+        }" \
+        "$DISCORD_WEBHOOK"
