--- a/.github/workflows/discord-issue-webhook.yml
+++ b/.github/workflows/discord-issue-webhook.yml
@@ -7,8 +7,9 @@ on:
 jobs:
   notify-discord:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Send new issue to Discord
+      - name: Send issue to Discord
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           ISSUE_TITLE: ${{ github.event.issue.title }}
@@ -20,14 +21,14 @@ jobs:
           ISSUE_CREATED: ${{ github.event.issue.created_at }}
           REPO_NAME: ${{ github.repository }}
         run: |
-          # Truncate and sanitize
-          TRUNC_BODY=$(echo "$ISSUE_BODY" | head -c 200)
-          [ -z "$TRUNC_BODY" ] && TRUNC_BODY="No description provided."
+          # Sanitize and truncate title/body to prevent formatting errors
+          SAFE_TITLE=$(echo "${ISSUE_TITLE:-Untitled}" | jq -Rs .)
+          SAFE_BODY=$(echo "${ISSUE_BODY:-No description provided.}" | head -c 200 | jq -Rs .)
 
-          # Create the payload using jq
+          # Construct JSON payload
           PAYLOAD=$(jq -n \
-            --arg title "🆕 New Issue #$ISSUE_NUMBER: $ISSUE_TITLE" \
-            --arg description "$TRUNC_BODY..." \
+            --argjson title "$SAFE_TITLE" \
+            --argjson description "$SAFE_BODY" \
             --arg url "$ISSUE_URL" \
             --arg author "$ISSUE_AUTHOR" \
             --arg avatar "$ISSUE_AVATAR" \
@@ -41,16 +42,17 @@ jobs:
                 color: 7506394,
                 author: {
                   name: $author,
-                  url: "https://github.com/" + $author,
+                  url: ("https://github.com/" + $author),
                   icon_url: $avatar
                 },
-                footer: {
-                  text: $repo
-                },
+                footer: { text: $repo },
                 timestamp: $created
               }]
             }')
 
+          echo "Sending payload to Discord:"
+          echo "$PAYLOAD"
+
           # Send to Discord
           curl -X POST -H "Content-Type: application/json" \
-               -d "$PAYLOAD" "$DISCORD_WEBHOOK"
+               -d "$PAYLOAD" "$DISCORD_WEB_
