--- a/.github/workflows/discord-issue-webhook.yml
+++ b/.github/workflows/discord-issue-webhook.yml
@@ -5,54 +5,17 @@ on:
     types: [opened]
 
 jobs:
-  notify-discord:
+  send-to-discord:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Send issue to Discord
+      - name: Send plain message to Discord
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           ISSUE_TITLE: ${{ github.event.issue.title }}
-          ISSUE_BODY: ${{ github.event.issue.body }}
           ISSUE_URL: ${{ github.event.issue.html_url }}
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
           ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
-          ISSUE_AVATAR: ${{ github.event.issue.user.avatar_url }}
-          ISSUE_CREATED: ${{ github.event.issue.created_at }}
-          REPO_NAME: ${{ github.repository }}
         run: |
-          # Sanitize and truncate title/body to prevent formatting errors
-          SAFE_TITLE=$(echo "${ISSUE_TITLE:-Untitled}" | jq -Rs .)
-          SAFE_BODY=$(echo "${ISSUE_BODY:-No description provided.}" | head -c 200 | jq -Rs .)
-
-          # Construct JSON payload
-          PAYLOAD=$(jq -n \
-            --argjson title "$SAFE_TITLE" \
-            --argjson description "$SAFE_BODY" \
-            --arg url "$ISSUE_URL" \
-            --arg author "$ISSUE_AUTHOR" \
-            --arg avatar "$ISSUE_AVATAR" \
-            --arg repo "$REPO_NAME" \
-            --arg created "$ISSUE_CREATED" \
-            '{
-              embeds: [{
-                title: $title,
-                description: $description,
-                url: $url,
-                color: 7506394,
-                author: {
-                  name: $author,
-                  url: ("https://github.com/" + $author),
-                  icon_url: $avatar
-                },
-                footer: { text: $repo },
-                timestamp: $created
-              }]
-            }')
-
-          echo "Sending payload to Discord:"
-          echo "$PAYLOAD"
-
-          # Send to Discord
           curl -X POST -H "Content-Type: application/json" \
-               -d "$PAYLOAD" "$DISCORD_WEB_
+          -d "{\"content\": \"🆕 New GitHub Issue Created!\\n**Title:** $ISSUE_TITLE\\n**Author:** $ISSUE_AUTHOR\\n🔗 $ISSUE_URL\"}" \
+          "$DISCORD_WEBHOOK"
