--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,14 @@
     },
     "Lua.workspace.library": [
         "~/.vscode/extensions/ketho.wow-api-0.21.0/Annotations/Core"
+    ],
+    "Lua.diagnostics.globals": [
+        "UIDropDownMenu_Initialize",
+        "UIDropDownMenu_AddButton",
+        "UIDropDownMenu_SetSelectedID",
+        "UIDropDownMenu_CreateInfo",
+        "SlashCmdList",
+        "DEFAULT_CHAT_FRAME",
+        "Settings"
     ]
 }
