fix: friend/guild alerts should now work again after entering/existing combat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
         "UIDropDownMenu_CreateInfo",
         "SlashCmdList",
         "DEFAULT_CHAT_FRAME",
-        "Settings"
+        "Settings",
+        "BATTLENET_FONT_COLOR",
+        "CopyTable",
+        "UIParent"
     ]
 }
